--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "i18next": "^25.0.2",
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-http-backend": "^3.0.2",
+    "moment": "^2.30.1",
+    "moment-jalaali": "^0.10.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/moment-jalaali": "^0.7.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/swiper": "^5.4.3",
