--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "recharts": "^2.15.3",
     "sweetalert2": "^11.19.1",
     "swiper": "^11.2.6",
-    "tailwindcss": "^4.1.4",
-    "typeface-vazir": "^1.0.1"
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
